[package]
name = "testimpl"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
lightning = { git = "https://github.com/tnull/rust-lightning", branch="2023-01-expose-impl-writeable-msg", features = ["max_level_trace", "std"] }
